--- a/pág2/style.css
+++ b/pág2/style.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     background-color: rgb(255, 211, 218);
