--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-    margin: 0;
+    margin: 10px;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
