--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
 body {
-    margin: 10px;
+    margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     background-color: rgb(255, 211, 218);
 }
 
