--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ main {
     text-align: justify;
     padding: 10px;
 }
+
+main > h1 {
+text-align: center;
+}
+
 .button {
     -moz-appearance: none;
     -webkit-appearance: none;
